Fix title punctuation in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <main>
             <div class="title">
-                <h1>Venta Lote en Arana</h1>
+                <h1>Venta Lote en Arana.</h1>
                 <p>625 y 134 - Arana | 18 x 60 metros</p>
             </div>
             <div class="cols">
