Update property description in index.html for clarity and detail

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <div class="box">
                         <h2>Descripción</h2>
                         <ul>
-                            <li>Lote Nro 4.</li>
-                            <li>Excelente ubicación, ideal para construcción residencial.</li>
+                            <li>Lote Nro 4. Calle 625 y 134 - Arana.</li>
+                            <li>Excelente ubicación, ideal vivienda o quinta.</li>
                             <li>La venta es con escritura en parte indivisa.</li>
                             <li>El barrio tiene solamente 21 integrantes.</li>
                             <li>Agua: cada lote debe realizar su perforación.</li>
