Add YouTube video embed with aspect ratio to index.html

--- a/index.html
+++ b/index.html
@@ -13,13 +13,26 @@
 
     <body>
 
-        <main>
+        <main style="padding-bottom: 60px;">
             <div class="title">
                 <h1>Venta Lote en Arana</h1>
                 <p>625 y 134 - Arana | 18 x 60 metros</p>
             </div>
             <div class="cols">
                 <div class="col-left">
+
+                    <div class="videos">
+                        <div style="margin:auto">
+                            <div style="position:relative;width:100%;aspect-ratio:16/9">
+                                <iframe src="https://www.youtube.com/embed/Q8YPTVuJYx4" title="Lote en Arana"
+                                    style="position:absolute;inset:0;width:100%;height:100%;border:0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    allowfullscreen loading="lazy" referrerpolicy="strict-origin-when-cross-origin">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="pswp-gallery" id="my-gallery">
                         <a href="./images/1.jpg" data-pswp-width="1875" data-pswp-height="2500" target="_blank">
                             <img src="./images/1.jpg" alt="" />
@@ -38,17 +51,7 @@
                         </a>
 
                     </div>
-                    <div class="videos">
-                        <div style="margin:auto">
-                            <div style="position:relative;width:100%;aspect-ratio:16/9">
-                                <iframe src="https://www.youtube.com/embed/Q8YPTVuJYx4" title="Lote en Arana"
-                                    style="position:absolute;inset:0;width:100%;height:100%;border:0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    allowfullscreen loading="lazy" referrerpolicy="strict-origin-when-cross-origin">
-                                </iframe>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
                 <div class="col-right">
                     <div class="box">
